--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs>
         <!-- Marker -->
-        <a-marker preset='custom' type='pattern' url='marker.patt'>
-            <!-- Video -->
-            <a-video src="video.mp4" width="1" height="0.5" position="0 0.5 0"></a-video>
+        <a-marker preset="custom" type="pattern" url="marker.patt">
+            <a-video 
+                src="video.mp4" 
+                width="1" 
+                height="1.5" 
+                position="0 0 0" 
+                rotation="0 0 0">
+            </a-video>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
