--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs>
         <!-- Marker -->
-        <a-marker preset="custom" type="pattern" url="marker.patt">
+        <a-marker preset="custom" type="pattern" url="marker.patt" emitevents="true">
             <a-video 
                 src="video.mp4" 
-                width="1" 
-                height="1.5" 
-                position="0 0 0" 
+                width="1"
+                height="1"
+                position="0 0 0"
                 rotation="0 0 0">
+                muted
+                autoplay
+                loop>
             </a-video>
         </a-marker>
         <a-entity camera></a-entity>
